update command to plytests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,4 +20,4 @@ jobs:
           command: npm install
       - run:
           name: Run Playwright Tests
-          command: npm test
+          command: yarn plytests
