--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "devDependencies": {
     "@playwright/test": "^1.49.0",
-    "@types/node": "^22.10.1"
+    "@types/node": "^22.10.1",
+    "typescript": "^5.7.2"
   },
   "scripts": {
+    "lint": "tsc --noEmit",
     "plytests": "yarn playwright test",
     "plyreports": "playwright show-report",
     "plyopen": "playwright test --ui"
