--- a/package.json
+++ b/package.json
@@ -5,12 +5,17 @@
   "repository": "https://github.com/Maryllkate/byb-playwright.git",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "^9.16.0",
     "@playwright/test": "^1.49.0",
     "@types/node": "^22.10.1",
-    "typescript": "^5.7.2"
+    "eslint": "^9.16.0",
+    "install": "^0.13.0",
+    "npm": "^10.9.2",
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   },
   "scripts": {
-    "lint": "tsc --noEmit",
+    "lint:fix": "tsc --noEmit && eslint tests/**",
     "plytests": "yarn playwright test",
     "plyreports": "playwright show-report",
     "plyopen": "playwright test --ui"
